[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/title-background.png" type="Texture" id=2]
[ext_resource path="res://World/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/block-button.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/controls.png" type="Texture" id=8]
[ext_resource path="res://Resources/TextFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://Resources/UITheme.tres" type="Theme" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 59.0
margin_top = 39.0
margin_right = 213.0
margin_bottom = 141.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 2.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 22.0
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 154.0
margin_bottom = 102.0

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/VBoxContainer/StartMenu"]
margin_left = 37.0
margin_right = 117.0
margin_bottom = 16.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/StartMenu/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="CenterContainer/VBoxContainer/StartMenu"]
margin_left = 37.0
margin_top = 20.0
margin_right = 117.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VBoxContainer/StartMenu/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect4" type="NinePatchRect" parent="CenterContainer/VBoxContainer/StartMenu"]
margin_left = 37.0
margin_top = 40.0
margin_right = 117.0
margin_bottom = 56.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/StartMenu/NinePatchRect4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="CenterContainer/VBoxContainer/StartMenu"]
margin_left = 37.0
margin_top = 60.0
margin_right = 117.0
margin_bottom = 76.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/StartMenu/NinePatchRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 26.0
margin_right = 154.0
margin_bottom = 62.0

[node name="ColorblindButton" type="CheckButton" parent="CenterContainer/VBoxContainer/SettingsMenu"]
margin_left = 31.0
margin_right = 123.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "COLORBLIND FRIENDLY"

[node name="NinePatchRect5" type="NinePatchRect" parent="CenterContainer/VBoxContainer/SettingsMenu"]
margin_left = 37.0
margin_top = 20.0
margin_right = 117.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/SettingsMenu/NinePatchRect5"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayMenu" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 106.0
margin_right = 197.0
margin_bottom = 238.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HowToPlayMenu"]
margin_right = 197.0
margin_bottom = 56.0
texture = ExtResource( 8 )

[node name="NinePatchRect6" type="NinePatchRect" parent="CenterContainer/VBoxContainer/HowToPlayMenu"]
margin_left = 8.0
margin_top = 60.0
margin_right = 188.0
margin_bottom = 112.0
rect_min_size = Vector2( 180, 52 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="RichTextLabel2" type="Label" parent="CenterContainer/VBoxContainer/HowToPlayMenu/NinePatchRect6"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 9 )
text = "SCORE AS MANY POINTS AS YOU CAN!
SHOOT BLOCKS WITH THE RIGHT COLOR UNTIL ITS POWER REACHES ZERO. SHOOT WITH THE WRONG COLOR AND THE POWER OF THE BLOCK WILL INCREASE!"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect5" type="NinePatchRect" parent="CenterContainer/VBoxContainer/HowToPlayMenu"]
margin_left = 58.0
margin_top = 116.0
margin_right = 138.0
margin_bottom = 132.0
rect_min_size = Vector2( 80, 16 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/HowToPlayMenu/NinePatchRect5"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="CenterContainer/VBoxContainer/StartMenu/NinePatchRect/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/StartMenu/NinePatchRect2/HowToPlayButton" to="." method="_on_HowToPlayButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/StartMenu/NinePatchRect4/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/StartMenu/NinePatchRect3/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/SettingsMenu/ColorblindButton" to="." method="_on_ColorblindButton_toggled"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/SettingsMenu/NinePatchRect5/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HowToPlayMenu/NinePatchRect5/BackButton" to="." method="_on_BackButton_button_up"]
